[gd_scene load_steps=11 format=3 uid="uid://sisur7efxxd7"]

[ext_resource type="Script" uid="uid://c5oagk17h60hi" path="res://game_hud/hud_quiz.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bd67afmhlsavi" path="res://assets/images/defaults/default_question_bg.png" id="2_x8ohq"]
[ext_resource type="Texture2D" uid="uid://4e82f5b2ug5s" path="res://assets/images/defaults/default_answer.png" id="3_84pkp"]
[ext_resource type="Texture2D" uid="uid://dbrbpdcdjw8pk" path="res://assets/images/defaults/default_strip_slot.png" id="3_nf1mv"]
[ext_resource type="Texture2D" uid="uid://dal3qhu07wggn" path="res://assets/images/defaults/default_strip_trivia.png" id="4_mo6im"]
[ext_resource type="Texture2D" uid="uid://cv6qiagff35km" path="res://assets/images/defaults/default_popup.png" id="4_nf1mv"]
[ext_resource type="Texture2D" uid="uid://cufg04s4y5nlr" path="res://assets/images/defaults/default_frame.png" id="4_vc1ao"]
[ext_resource type="Texture2D" uid="uid://46otg2or8s6d" path="res://assets/images/defaults/default_strip_answer.png" id="5_84pkp"]
[ext_resource type="FontFile" uid="uid://csn3d5380e32l" path="res://assets/fonts/PixeloidSans-Bold.ttf" id="5_wy7xw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1vnt"]

[node name="HUD_Quiz" type="Panel"]
custom_minimum_size = Vector2(1022, 1200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -511.0
offset_top = -660.0
offset_right = 511.0
offset_bottom = 635.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1")

[node name="bg_texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
texture = ExtResource("2_x8ohq")
stretch_mode = 2

[node name="answer_image" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -575.0
offset_right = 450.0
offset_bottom = 575.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_84pkp")

[node name="frame_image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -511.0
offset_top = -647.5
offset_right = 511.0
offset_bottom = 647.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vc1ao")
stretch_mode = 2

[node name="Answers" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.734
anchor_right = 0.5
anchor_bottom = 0.734
offset_left = -479.0
offset_top = -250.53
offset_right = 480.0
offset_bottom = 149.47
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00235, 0.993625)
theme_override_constants/separation = 30
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Answers"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Answer_1" type="Button" parent="Answers/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_f1vnt")
text = "Maradona"
autowrap_mode = 3

[node name="Answer_2" type="Button" parent="Answers/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_f1vnt")
text = "Ronaldinho"
autowrap_mode = 3

[node name="Row2" type="HBoxContainer" parent="Answers"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Answer_3" type="Button" parent="Answers/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_f1vnt")
text = "Miroslav Klose"
autowrap_mode = 3

[node name="Answer_4" type="Button" parent="Answers/Row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_f1vnt")
text = "El Chicharito Hernández"
autowrap_mode = 3

[node name="slot_badge" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -609.0
offset_top = 431.5
offset_right = 26.0
offset_bottom = 1066.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nf1mv")

[node name="strip_slot" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 405.0
offset_top = 23.0
offset_right = 1013.0
offset_bottom = 153.0
texture = ExtResource("3_nf1mv")
stretch_mode = 2

[node name="label_slot" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.349
anchor_top = 0.031
anchor_right = 0.912
anchor_bottom = 0.115
offset_left = 72.322
offset_top = -12.145
offset_right = 71.9359
offset_bottom = -11.925
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 45
text = "Tiro de esquina"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="strip_category" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_right = 0.25
anchor_bottom = 0.2
offset_left = 387.9
offset_top = 990.0
offset_right = 786.5
offset_bottom = 1149.0
mouse_filter = 2
texture = ExtResource("4_mo6im")
stretch_mode = 2
metadata/_edit_lock_ = true

[node name="strip_answer" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = 215.5
offset_right = 518.0
offset_bottom = 401.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_84pkp")
stretch_mode = 2

[node name="answer_label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
offset_left = -68.2
offset_top = 862.0
offset_right = 97.2
offset_bottom = 1038.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 90
text = "BRASIL"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="feedback_label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
offset_left = 35.8
offset_top = 663.0
offset_right = -36.8
offset_bottom = 856.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 70
text = "Incorrecto
la respuesta es:"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="feedback_label2" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.110568
anchor_top = 0.734749
anchor_right = 0.924658
anchor_bottom = 0.912355
offset_top = 33.5
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 50
text = " "
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="label_question" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
offset_left = -66.2
offset_top = 86.0
offset_right = 62.2
offset_bottom = 742.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 25
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("5_wy7xw")
theme_override_font_sizes/font_size = 80
text = "¿Qué entrenador es famoso por su etapa en el Arsenal y por promover el fútbol ofensivo?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="button_up" from="Answers/Row1/Answer_1" to="." method="_on_answer_1_button_up"]
[connection signal="button_up" from="Answers/Row1/Answer_2" to="." method="_on_answer_2_button_up"]
[connection signal="button_up" from="Answers/Row2/Answer_3" to="." method="_on_answer_3_button_up"]
[connection signal="button_up" from="Answers/Row2/Answer_4" to="." method="_on_answer_4_button_up"]
